[build-system]
requires = ["sphinx-theme-builder >= 0.2.0a10"]
build-backend = "sphinx_theme_builder"

[tool.sphinx-theme-builder]
node-version = "18.20.5"
additional-compiled-static-assets = ["styles/furo-extensions.css"]

[project]
name = "furo"
description = "A clean customisable Sphinx documentation theme."
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
  "beautifulsoup4",
  "sphinx >= 7.0,<10.0",
  "sphinx-basic-ng >= 1.0.0.beta2",
  "pygments >= 2.7",
  "accessible-pygments >= 0.0.5",
]

license = "MIT"
license-files = [
  "LICENSE",
  "LICENSE.icons",
]
authors = [{ name = "Pradyun Gedam", email = "mail@pradyunsg.me" }]
classifiers = [
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.entry-points]
"sphinx.html_themes" = { furo = "furo" }

[project.urls]
GitHub = "https://github.com/pradyunsg/furo"

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = ["D"]
ignore = ["E501", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["D"]
